# Meeting

./: CMakeLists.txt  Controller.cpp  Controller.h  main.cpp
Data/: Client.cpp  Client.h  SDKcall.cpp  SDKcall.h  SettingData.h
TokenServer/: Server.cpp  Server.h  servermain.cpp
TokenServer/TokenSDK/: AccessToken2.h  RtcTokenBuilder2.h  utils.h
View/: SettingView.cpp  SettingView.h  StartView.cpp  StartView.h
sdk/x86/: agora_rtc_sdk.dll.lib  libagora-ffmpeg.dll.lib  libagora_ai_echo_cancellation_ll_extension.dll.lib  libagora_ai_noise_suppression_ll_extension.dll.lib
sdk/x86_64/: agora_rtc_sdk.dll.lib  libagora-ffmpeg.dll.lib  libagora_ai_echo_cancellation_ll_extension.dll.lib  libagora_ai_noise_suppression_ll_extension.dll.lib
